[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mtprotoproxy"
version = "1.0.0"
description = "Fast and simple to setup MTProto proxy written in Python"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "RioTwWks"}
]
keywords = ["telegram", "mtproto", "proxy", "vpn"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "cryptography>=41.0.0",
    "pyaes>=1.3.0",
]

[project.optional-dependencies]
performance = [
    "uvloop>=0.19.0; sys_platform != 'win32'",
]

[project.scripts]
mtprotoproxy = "mtprotoproxy:main"

